Added onclick events

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
         android:textColor="@android:color/white"
         android:textSize="36sp"
         android:textStyle="normal|italic"
+        android:onClick="getPun"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.87"
@@ -35,6 +36,7 @@
         android:textColor="@android:color/white"
         android:textSize="36sp"
         android:textStyle="italic"
+        android:onClick="getRiddle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.13"
@@ -51,6 +53,7 @@
         android:textColor="@android:color/white"
         android:textSize="18sp"
         android:textStyle="italic"
+        android:onClick="getAnswer"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
